--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Source Library</title>
-    <link rel="stylesheet" href="styles_css/style.css">
+    <link rel="stylesheet" href="Styles_css/style.css">
 </head>
 <body>
 
