--- a/Science.html
+++ b/Science.html
@@ -54,11 +54,11 @@
         <div><p class="paragraph">Book 1</p>
             <button type="button" class="button" id="1" data-download="https://drive.google.com/file/d/1L_aW8uZRFBkKyn7qdW54AmQ0OiqbRLzW/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 2</p>
-            <button type="button" class="button" id="2" data-download="Books_pdf/understanding-the-universe-quarks-leptons-big-bang-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="2" data-download="https://drive.google.com/file/d/1F_h_rLjgd44KGdsgMX9cTrDTJ15vzcoG/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 3</p>
-            <button type="button" class="button" id="3" data-download="Books_pdf/resident-skeptic-postcards-from-the-big-empty-cowles-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="3" data-download="https://drive.google.com/file/d/1HTZ04mA5GYE_yoUhjNbcEbLxNM-NOxcb/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 4</p>
-            <button type="button" class="button" id="4" data-download="Books_pdf/cyber-exposure-management-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="4" data-download="https://drive.google.com/file/d/1Ji5BeqI41JO3oZFrIG8C6NWp8TvObDMT/view?usp=drive_link">Download Book</button></div>
      </div>
 
      <br><br><br><br><br><br><br>
@@ -82,13 +82,13 @@
      <br><br><br>
      <div class="text">
         <div><p class="paragraph">Book 5</p>
-            <button type="button" class="button" id="5" data-download="Books_pdf/from-the-beginning-of-space-and-time-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="5" data-download="https://drive.google.com/file/d/1LPfVO604IUKxcVrk2YFiIh-Wcudif6Ph/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 6</p>
-            <button type="button" class="button" id="6" data-download="Books_pdf/paradoxes-of-the-problem-of-critical-infrastructure-protection-against-emp-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="6" data-download="https://drive.google.com/file/d/1HG3T5T4NWhjALVT9HViHe6UVPTZD5TU2/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 7</p>
-            <button type="button" class="button" id="7" data-download="Books_pdf/the-mathematical-universe-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="7" data-download="https://drive.google.com/file/d/1GxrJFo224YTBQnlnvq7oia8j-2CKBUjS/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 8</p>
-            <button type="button" class="button" id="8" data-download="Books_pdf/how-to-create-a-research-project-obooko (1).pdf">Download Book</button></div>
+            <button type="button" class="button" id="8" data-download="https://drive.google.com/file/d/1LbzBuBsnbVsr-MuQDnv9GY6-zkBa1RkV/view?usp=drive_link">Download Book</button></div>
      </div>
      <br><br><br><br><br><br><br>
 
@@ -112,13 +112,13 @@
      
      <div class="text">
         <div><p class="paragraph">Book 9</p>
-            <button type="button" class="button" id="9" data-download="Books_pdf/thought-forms-obooko.pdf">Download Book</button></div>
+            <button type="button" class="button" id="9" data-download="https://drive.google.com/file/d/1GX26uE2a8P_2Mbz4VJm0CPDDD8_UI0be/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 10</p>
-            <button type="button" class="button" id="10" data-download="Books_pdf/the-origin-of-the-cosmos-renedo-obooko.pdf">Download Book</button></div>
+            <button type="button" class="button" id="10" data-download="https://drive.google.com/file/d/1GAAi-Xj43CfSJIRaHSWE9clkvMG4r_T_/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 11</p>
-            <button type="button" class="button" id="11" data-download="Books_pdf/GreatSimulator1-obooko-mind0022.pdf">Download Book</button></div>
+            <button type="button" class="button" id="11" data-download="https://drive.google.com/file/d/1LdTevqG0fajAtNhPpQJIf9i3_Ng6uw2O/view?usp=drive_link">Download Book</button></div>
         <div><p class="paragraph">Book 12</p>
-            <button type="button" class="button" id="12" data-download="Books_pdf/science-of-speech-obooko.pdf">Download Book</button></div>
+            <button type="button" class="button" id="12" data-download="https://drive.google.com/file/d/1GcTaErrCeqXop5fVXy4O7tejfDc85SkN/view?usp=drive_link">Download Book</button></div>
      </div>
      <br><br><br><br><br><br><br>
 
@@ -139,13 +139,13 @@
 <br><br><br>
 <div class="text">
     <div><p class="paragraph">Book 13</p>
-        <button type="button" class="button" id="13" data-download="Books_pdf/drops-of-being-obooko.pdf">Download Book</button></div>
+        <button type="button" class="button" id="13" data-download="https://drive.google.com/file/d/1JVC3vsRAKHVFVfnNY6xAykz8tAEGKNHJ/view?usp=drive_link">Download Book</button></div>
     <div><p class="paragraph">Book 14</p>
-        <button type="button" class="button" id="14" data-download="Books_pdf/Butterflies-obooko-mind0020.pdf">Download Book</button></div>
+        <button type="button" class="button" id="14" data-download="https://drive.google.com/file/d/1JoQhSq_a0ON77B5uxowp9-ezHIiO_3tM/view?usp=drive_link">Download Book</button></div>
     <div><p class="paragraph">Book 15</p>
-        <button type="button" class="button" id="15" data-download="Books_pdf/who-am-i-dada-bhagwan-obooko.pdf">Download Book</button></div>
+        <button type="button" class="button" id="15" data-download="https://drive.google.com/file/d/1GTxqVcgyc0OLtKssO6V106YpP0rfY-mZ/view?usp=drive_link">Download Book</button></div>
     <div><p class="paragraph">Book 16></p>
-    <button type="button" class="button" id="16" data-download="Books_pdf/star-beings-obooko.pdf">Download Book</button>
+    <button type="button" class="button" id="16" data-download="https://drive.google.com/file/d/1IXa17A8j1gJ8OTOobfM1RRw2jBvOFIvv/view?usp=drive_link">Download Book</button>
     </div>
  </div>
 <br><br><br><br><br><br><br>
